Fixed text-align attribute for text... used directive - might be possible to do in xslt.

--- a/style.css
+++ b/style.css
@@ -48,6 +48,9 @@ a {
 .absolute {
   position: absolute;
 }
+.center {
+  text-align: center;
+}
 .l {
   left: 0;
 }
